# Kingdom_Guard

./: .gitignore  LICENSE  README.md  build.sh  mkdocs.yml  pyproject.toml
docs/: CNAME  index.md
docs/calculators/: index.md
docs/calculators/mightiest_kingdom/: index.md  mk_calc.js
