[tool.poetry]
name = "kingdom-guard"
version = "0.1.0"
description = "example kg site"
authors = ["Hendrix"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-material = "^9.4.4"
mkdocs-material-extensions = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
